--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT=4108
-MONGO_URI='mongodb+srv://rasulov:rasulov@cluster0.5zt4b.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
-# MONGO_URI='mongodb://localhost:27017/educert'
+MONGO_URI='mongodb://localhost:27017/educert'
